// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle component renders a toggle switch 1`] = `
.sx6gk47 {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  padding: 2px;
  box-shadow: inset 0 0 0 1px var(--sx-shadows-tonal300);
  overflow: hidden;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: inline-flex;
  width: 50px;
}

.sx6gk47:focus {
  outline: none;
}

.sx6gk47[data-state=on] {
  background-color: var(--sx-colors-success);
  justify-content: flex-end;
}

.sx6gk47[data-state=off] {
  justify-content: flex-start;
}

.sxz551g {
  height: 20px;
  width: 20px;
  background: white;
  display: inline-block;
  border-radius: var(--sx-radii-round);
}

<div>
  <button
    aria-pressed="false"
    class="sx6gk47"
    data-state="off"
    type="button"
  >
    <span
      class="sxz551g"
    />
  </button>
</div>
`;

exports[`Toggle component renders a toggle switch 2`] = `
.sx6gk47 {
  -webkit-appearance: none;
  appearance: none;
  background-color: var(--sx-colors-tonal300);
  border: none;
  padding: 2px;
  box-shadow: inset 0 0 0 1px var(--sx-shadows-tonal300);
  overflow: hidden;
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: inline-flex;
  width: 50px;
}

.sx6gk47:focus {
  outline: none;
}

.sx6gk47[data-state=on] {
  background-color: var(--sx-colors-success);
  justify-content: flex-end;
}

.sx6gk47[data-state=off] {
  justify-content: flex-start;
}

.sxz551g {
  height: 20px;
  width: 20px;
  background: white;
  display: inline-block;
  border-radius: var(--sx-radii-round);
}

<div>
  <button
    aria-pressed="false"
    class="sx6gk47"
    data-disabled=""
    data-state="off"
    disabled=""
    type="button"
  >
    <span
      class="sxz551g"
    />
  </button>
</div>
`;
